--- a/area-do-curso.html
+++ b/area-do-curso.html
@@ -23,19 +23,37 @@
   <section>
       <iframe width="550" height="300" src="https://www.youtube.com/embed/Fqzlq_HtFaI?si=1UpGB4lWRNBiS2TG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
     </section>
+	
+    <section>
+      <iframe width="550" height="300" src="https://www.youtube.com/embed/jYxiZ-3vyMY?si=KMA-vyLbIh0bPE4j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+    </section>
+	
+	<section>
+      <iframe width="550" height="300" src="https://www.youtube.com/embed/dR5PNZhaLzU?si=rkPPODHJ8zzL4Ivk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+    </section>
 
+	<section>
+      <iframe width="550" height="300" src="https://www.youtube.com/embed/-9JcCFlakbI?si=6Ly_Yc8vfPc6z78E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+    </section>
+	
+    <section>
+	<iframe width="550" height="300" src="https://www.youtube.com/embed/Gm3Dz8IXnis?si=T5Z-FfL4tyZNtmMu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+	
     <section>
       <iframe width="550" height="300" src="https://www.youtube.com/embed/ylmBwtqHD10?si=rMZG93WLU2r1IeDT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section> 
+	
+	<section>
+      <iframe width="550" height="300" src="https://www.youtube.com/embed/2qvplZzi970?si=Xv_-OszmNUZgkkb9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section> 
  
-     <section>
+    <section>
      <iframe width="550" height="300" src="https://www.youtube.com/embed/DhNKJuh_g-A?si=S65WZU43lMEKL5vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>  
 
- <section>
+    <section>
     <iframe width="560" height="300" src="https://www.youtube.com/embed/_G9RfvnYL_g?si=RI10wti_4-ziaUH6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
     </section>  
 
 
@@ -46,4 +64,5 @@
     <div class="container">
         <section class="course-area">
             <h2>Bem-vindo à Área do Curso</h2>
+
             <div class>
