--- a/area-do-curso.html
+++ b/area-do-curso.html
@@ -29,7 +29,8 @@
             <h2>Bem-vindo à Área do Curso</h2>
 		</section>
 	</div>
-	
+
+	<div class="container">
     <section>
       <iframe width="550" height="300" src="https://www.youtube.com/embed/jYxiZ-3vyMY?si=KMA-vyLbIh0bPE4j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
     </section>
@@ -64,7 +65,9 @@
 
     <section>
     <iframe width="560" height="300" src="https://www.youtube.com/embed/_G9RfvnYL_g?si=RI10wti_4-ziaUH6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section> 
+    </section>
+	</div>	
+		
 </body> 
 </html>
 
@@ -72,6 +75,7 @@
     
 
             
+
 
 
 
