--- a/area-do-curso.html
+++ b/area-do-curso.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área do Curso - Cursos Online para Idosos</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -21,63 +21,60 @@
                     <li class="current"><a href="area-do-curso.html">Área do Curso</a></li>
                 </ul>
             </nav>
-		</div>
-	</header>
-	
+        </div>
+    </header>
+
     <div class="container">
         <section class="course-area">
             <h2>Bem-vindo à Área do Curso</h2>
-		</section>
-	</div>
+            <p>Aqui você encontrará os vídeos do curso organizados de forma simples e acessível.</p>
+        </section>
+    </div>
 
-	<div class="container">
-    <section>
-      <iframe width="550" height="300" src="https://www.youtube.com/embed/jYxiZ-3vyMY?si=KMA-vyLbIh0bPE4j" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-    </section>
-			
-	<section>
-      <iframe width="550" height="300" src="https://www.youtube.com/embed/Fqzlq_HtFaI?si=1UpGB4lWRNBiS2TG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-    </section>		
-	
-	<section>
-      <iframe width="550" height="300" src="https://www.youtube.com/embed/dR5PNZhaLzU?si=rkPPODHJ8zzL4Ivk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-    </section>
+    <div class="container video-grid">
+        <section>
+            <iframe src="https://www.youtube.com/embed/jYxiZ-3vyMY?si=KMA-vyLbIh0bPE4j" title="Vídeo 1" frameborder="0" allowfullscreen></iframe>
+        </section>
 
-	<section>
-      <iframe width="550" height="300" src="https://www.youtube.com/embed/-9JcCFlakbI?si=6Ly_Yc8vfPc6z78E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
-    </section>
-	
-    <section>
-	<iframe width="550" height="300" src="https://www.youtube.com/embed/Gm3Dz8IXnis?si=T5Z-FfL4tyZNtmMu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section>
-	
-    <section>
-      <iframe width="550" height="300" src="https://www.youtube.com/embed/ylmBwtqHD10?si=rMZG93WLU2r1IeDT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section> 
-	
-	<section>
-      <iframe width="550" height="300" src="https://www.youtube.com/embed/2qvplZzi970?si=Xv_-OszmNUZgkkb9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section> 
- 
-    <section>
-     <iframe width="550" height="300" src="https://www.youtube.com/embed/DhNKJuh_g-A?si=S65WZU43lMEKL5vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section>  
+        <section>
+            <iframe src="https://www.youtube.com/embed/Fqzlq_HtFaI?si=1UpGB4lWRNBiS2TG" title="Vídeo 2" frameborder="0" allowfullscreen></iframe>
+        </section>
 
-    <section>
-    <iframe width="560" height="300" src="https://www.youtube.com/embed/_G9RfvnYL_g?si=RI10wti_4-ziaUH6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </section>
-	</div>	
-		
-</body> 
+        <section>
+            <iframe src="https://www.youtube.com/embed/dR5PNZhaLzU?si=rkPPODHJ8zzL4Ivk" title="Vídeo 3" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <iframe src="https://www.youtube.com/embed/-9JcCFlakbI?si=6Ly_Yc8vfPc6z78E" title="Vídeo 4" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <iframe src="https://www.youtube.com/embed/Gm3Dz8IXnis?si=T5Z-FfL4tyZNtmMu" title="Vídeo 5" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <iframe src="https://www.youtube.com/embed/ylmBwtqHD10?si=rMZG93WLU2r1IeDT" title="Vídeo 6" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <iframe src="https://www.youtube.com/embed/2qvplZzi970?si=Xv_-OszmNUZgkkb9" title="Vídeo 7" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <iframe src="https://www.youtube.com/embed/DhNKJuh_g-A?si=S65WZU43lMEKL5vz" title="Vídeo 8" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+		<section>
+            <iframe src="https://www.youtube.com/embed/fZvY4kCr67I?si=8kD9_EkyHAnc53fV" title="Vídeo 9" frameborder="0" allowfullscreen></iframe>
+        </section>
+
+        <section>
+            <iframe src="https://www.youtube.com/embed/_G9RfvnYL_g?si=RI10wti_4-ziaUH6" title="Vídeo 10" frameborder="0" allowfullscreen></iframe>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Cursos Online para Idosos | Todos os direitos reservados</p>
+    </footer>
+</body>
 </html>
-
-
-    
-
-            
-
-
-
-
-
-
