--- a/area-do-curso.html
+++ b/area-do-curso.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área do Curso - Cursos Online para Idosos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <header>
@@ -78,3 +78,4 @@
     </footer>
 </body>
 </html>
+
